style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "montserrat";
    color: white;
}
html,body{
    width: 100vw;
    height: 100vh;
}
#main{
    height: 100%;
    width: 100%;
    background-color: black;
    display: flex;
    align-items: center;
    justify-content: center;
}
#cursor{
    height: 50px;
    width: 50px;
    background-color: rgb(255, 255, 255);
    border-radius: 50%;
    position: absolute;
    transition: all linear 0.1s;
    mix-blend-mode: difference;
}
h1{
    font-size: 6VW;
    font-weight: 900;
}

